--- a/views/menu.html
+++ b/views/menu.html
@@ -4,9 +4,9 @@
 <div class="panel-collapse collapse in">
     <form class="panel-body" ng-submit="addCircle()">
         <div>Rayon (km) :</div>
-        <input type="text" name="radius" ng-model="radius">
+        <input type="text" name="radius" ng-model="radius"></input>
         <div>Coordonnées du centre :</div>
-        <input type="text" ng-model="center" name="center" ng-model="center">
+        <input type="text" ng-model="center" name="center" ng-model="center"></input>
         <input type="submit" value="Dessiner le cercle" class="btn btn-default"></input>
     </form>
 </div>
@@ -17,7 +17,7 @@
 <div class="panel-collapse collapse in">
     <form class="panel-body" ng-submit="addPoly()">
         <div>Coordonnées :</div>
-        <input type="text" name="polyCoords" ng-model="polyCoords">
+        <input type="text" name="polyCoords" ng-model="polyCoords"></input>
         <input type="submit" value="Dessiner le polygone" class="btn btn-default"></input>
     </form>
 </div>
